2006-06-23  Daniel South  <wildcard_25@users.sourceforge.net>

	* tkchat.tcl (::tkchat::addTraffic): Fixed bug in handling of nick
	(::tkjabber::RosterCB):              changes. Reverted previous
	(::tkchat::updateOnlineNames):       commit's workaround.
	(::tkjabber::setNick):
	(::tkjabber::transferNick):

	* tkchat.tcl (::tkchat::CreateGUI): Only execute autoStatus proc when
	(::tkchat::checkCommand):           autostatus enabled. Switch user to
	(::tkjabber::LoginCB):              extended away when user is away
	(::tkjabber::MucEnterCB):           manually and idle for an extended
	(::tkjabber::away):                 period of time. Remember away
	(::tkjabber::back):                 status when being logged off/on
	(::tkjabber::autoStatus):           manually or due to a network
	interuption.

	* tkchat.tcl (::tkchat::checkCommand): Make /dnd and /busy work
	correctly (Broken since introduction in v1.269).

	* tkchat.tcl (::tkchat::BookmarkClear): Clear autoBookmarks when
	clearing all bookmarks.

	* tkchat.tcl (::tkchat::updateOnlineNames): Stop Onlinenames window
	from scrolling to top everytime someone enters or leaves the chat.

	* tkchat.tcl (::tkjabber::connect): Go back to login screen if initial
	(::tkchat::logonChat):              connection fails.

2006-05-31  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Fixed bug in handling of nick changes.

2006-05-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl (::tkjabber::MsgCB): More polite handling of error
	response when sending private chat messages.
	* tkchat.tcl (::tkjabber::RosterCB): Add a system message to a
	chat window if the chat partner disconnects.

2006-03-21  Reinhard Max  <max@suse.de>

	* tkchat.tcl (::tkchat::OnNamePopup): The hide/show user
	functionality was wrongly placed on the "User Info" button in the
	context menu.

2006-03-20  Daniel South  <wildcard_25@users.sourceforge.net>

	* tkchat.tcl (::tkchat::CreateGUI): Stop excess double-click selection.
