@@ -1,3 +1,8 @@
+2006-06-23  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl: Allow the non-SASL jabber auth to work with STARTTLS
+	              logins. We have to capture the new stream id.
+
 2006-06-23  Daniel South  <wildcard_25@users.sourceforge.net>
 
 	* tkchat.tcl (::tkchat::addTraffic): Fixed bug in handling of nick
